<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RandGKAApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="rand_source">Randomness Source</string>
    <string name="rand_extractor">Randomness Extractor</string>
    <string name="source_type">Source type</string>
    <string name="camera">Camera</string>
    <string name="source_output_method">Source Output Method</string>
    <string name="sopByteArray">Byte Array</string>
    <string name="sopFile">File</string>
    <string name="min_entropy_data_length">Min-Entropy Data Length</string>
    <string name="start">Start</string>
    <string name="generate">Generate</string>
    <string name="bluetooth_gka">Bluetooth GKA</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="connect">Connect</string>
    <string name="discovered_devices">Discovered Devices</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="authentication">Authentication</string>
    <string name="title_activity_gkaprotocol">GKAProtocolActivity</string>
    <string name="run_protocol">Run Protocol</string>
    <string name="empty">Empty</string>
    <string name="title_activity_min_entropy_source">MinEntropySourceActivity</string>
    <string name="generating_min_entropy_seq">Generating Min-Entropy Sequence</string>
    <string name="title_activity_rand_extractor">RandExtractorActivity</string>
    <string name="generating_random_seq">Generating Random Sequence</string>
    <string name="rand_data_length">Length of Random Data</string>
    <string name="title_activity_gkaprotocol_random_data">GKAProtocolRandomDataActivity</string>
    <string name="title_activity_public_key_cryptography_app">PublicKeyCryptographyAppActivity</string>
    <string name="public_key_cryptography">Public-Key Cryptography</string>
    <string name="my_certificate">My Certificate</string>
    <string name="title_activity_gkaprotocol_print_key_app">GKAProtocolPrintKeyAppActivity</string>
    <string name="title_activity_rand_extractor2_app">RandExtractor2AppActivity</string>
    <string name="min_entropy_source">MinEntropySource</string>
    <string name="gka">GroupKeyAgreement</string>
    <string name="min_entropy_sequence">Min-entropy Sequence (16)</string>
    <string name="extract_data">ExtractData</string>
    <string name="extracted_data">Extracted Random Data (16)</string>
    <string name="participants">Protocol Participants</string>
    <string name="gka_key">GKA Key</string>
    <string name="title_activity_gkaprotocol_chooser">GKAProtocolChooser</string>
    <string name="protocol">Protocol</string>
    <string name="ok">OK</string>
    <string name="title_activity_bluetooth_gkarole">BluetoothGKARoleActivity</string>
    <string name="leader">Leader</string>
    <string name="member">Member</string>
    <string name="title_activity_bluetooth_gkamember">BluetoothGKAMemberActivity</string>
    <string name="title_activity_bluetooth_gkaleader">BluetoothGKALeaderActivity</string>
    <string name="nonceLength">Nonce length (bits)</string>
    <string name="groupKeyLength">Group key length (bits)</string>
    <string name="publicKeyLength">Public key length (bits)</string>
    <string name="devices">Devices</string>
    <string name="title_activity_bluetooth_gk">BluetoothGKActivity</string>
    <string name="protocol_version">Version</string>
    <string name="auth">Authenticated</string>
    <string name="auth_conf">Authenticated + key confirmation</string>
    <string name="non_auth">Non-authenticated</string>
    <string name="wifi_gka">Wi-fi GKA</string>
    <string name="title_activity_gkatech_decision">GKATechDecisionActivity</string>
	<string name="role">Role</string>
	<string name="channel">Channel</string>
	<string name="fresh_key">Use fresh long-term key</string>
	<string name="continu">Continue</string>
	<string name="augot">Augot protocol</string>
	<string name="retrieve_key">Retrieve key</string>
	<string name="long_term_keys">Long-term keys</string>
	<string name="output_file">Output file (empty = display sequence)</string>
	<string name="output_length">Output length (bits)</string>
	<string name="key_length">Key length</string>
	<string name="random_source">Randomness source</string>
	<string name="wifi_connection_warning">Device is not interconnected. Connect it using tethering with other devices.</string>
	<string name="wifi_leader_connection_warning">Device has to be set as a hotspot.</string>
</resources>
